[gd_scene load_steps=7 format=1]

[ext_resource path="res://Lingvo.gd" type="Script" id=1]
[ext_resource path="res://Temoj/Butono_sxveba.tres" type="StyleBox" id=2]
[ext_resource path="res://Temoj/Butono_premita.tres" type="StyleBox" id=3]
[ext_resource path="res://Temoj/Butono.tres" type="StyleBox" id=4]
[ext_resource path="res://Tiparoj/jomhuria.fnt" type="BitmapFont" id=5]
[ext_resource path="res://Sonoj/Tabloj/130428__mmiron__na-sharp.ogg" type="AudioStream" id=6]

[node name="Lingvo" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="EO" type="Button" parent="."]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 430.0
margin/right = 550.0
margin/bottom = 580.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Elektu min!"
flat = false

[node name="Polygon2D" type="Polygon2D" parent="EO"]

transform/pos = Vector2( 299.213, 131.545 )
polygon = Vector2Array( -80.3334, -0.333374, -80.3334, 79.6666, 106.333, 106.333, 199.667, 79.6666, 222.333, 12.9999, 119.667, -13.6667 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="EO/Polygon2D"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = 17.0
margin/right = 267.0
margin/bottom = 94.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Esperanto"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="EN" type="Button" parent="."]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 200.0
margin/right = 550.0
margin/bottom = 350.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Choose me!"
flat = false

[node name="Polygon2D" type="Polygon2D" parent="EN"]

transform/pos = Vector2( 299.213, 131.545 )
polygon = Vector2Array( 39.6666, -13.6667, -80.3334, -0.333374, -80.3334, 79.6666, 106.333, 106.333, 199.667, 79.6666, 222.333, 12.9999 )
uv = Vector2Array(  )
color = Color( 0, 0, 0, 1 )
vertex_colors = ColorArray(  )
offset = Vector2( 0, 0 )
texture/texture = null
texture/offset = Vector2( 0, 0 )
texture/scale = Vector2( 1, 1 )
texture/rotation = 0.0
invert/enable = false
invert/border = 100.0

[node name="Label" type="Label" parent="EN/Polygon2D"]

rect/scale = Vector2( 0.6, 0.6 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -2.0
margin/top = 17.0
margin/right = 285.0
margin/bottom = 94.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "English"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Enveno_sono" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 5.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="EO" to="." method="_on_EO_pressed"]

[connection signal="pressed" from="EN" to="." method="_on_EN_pressed"]


